--- a/templates/header_and_footer/footer.html
+++ b/templates/header_and_footer/footer.html
@@ -1,3 +1,4 @@
+</div>
 <footer class="bg-light text-dark py-4 mt-5">
   <div class="container d-flex justify-content-between">
     <a href="{% url 'admin:index' %}" class="text-dark">Админ панель</a>
