--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,19 @@
 html, body {
-  height: 100%;
-  margin: 0;
+    height: 100%;
+    margin: 0;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .content {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 footer {
-  flex-shrink: 0;
+    flex-shrink: 0;
 }
 
 .background-image {
@@ -90,4 +90,25 @@ footer {
     font-size: 1.3em;
     max-width: 800px;
     margin: auto;
+}
+
+.nav-pills .nav-link {
+    border-radius: 0.25rem;
+}
+
+.card {
+    transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.03);
+}
+
+.post-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
 }
