--- a/templates/header_and_footer/header.html
+++ b/templates/header_and_footer/header.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#"><img src="../../media/logo.png" alt="" width="60" height="60"></a>
+    <a class="navbar-brand" href="#"><img src="../../../media/logo.png" alt="" width="60" height="60"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
